5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3788/executions/1800_2573.log
== TEST (2019-06-12 23:22:30) 
-- CODE:
peso = eval(input())
altura = eval(input())

cont=zeros(size(peso),dtype=int)

for i in range(size(p)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    cont=zeros(size(peso),dtype=int)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:24:44) 
-- CODE:
peso = eval(input())
altura = eval(input())
n = size(p)
cont=zeros(n,dtype=int)

for i in range(size(p)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n = size(p)
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:24:45) 
-- CODE:
peso = eval(input())
altura = eval(input())
n = size(p)
cont=zeros(n,dtype=int)

for i in range(size(p)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n = size(p)
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:26:16) 
-- CODE:
peso = array(eval(input()))
altura = array(eval(input()))
n = size(p)
cont=zeros(n,dtype=int)

for i in range(size(p)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    peso = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:26:49) 
-- CODE:
from numoy import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(p)
cont=zeros(n,dtype=int)

for i in range(size(p)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numoy import *
ModuleNotFoundError: No module named 'numoy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:27:02) 
-- CODE:
from numpy import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(p)
cont=zeros(n,dtype=int)

for i in range(size(p)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:27:50) 
-- CODE:
from numpy import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(p)
cont=zeros(n,dtype=int)

for i in range(size(p)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:28:16) 
-- CODE:
from numpy import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(p)
cont=zeros(n,dtype=float)

for i in range(size(p)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:28:53) 
-- CODE:
from numpy import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(p)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:29:38) 
-- CODE:
from numpy import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(peso)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:37:42) 
-- CODE:
from numpy import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(peso)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(round(cont,2))
print("O MAIOR IMC DA TURMA EH:" max(cont))

if(max(cont)<17):
	print("MUITO ABAIXO DO PESO")
elif(max(cont)>=17 and max(cont)<=18,49):
	print("ABAIXO DO PESO")
elif(max(cont)>=18,5 and max(cont)<=24,99):
	print("PESO NORMAL")
elif(max(cont)>=25 and max(cont)<=29,99):
	print("ACIMA DO PESO")
elif(max(cont)>=30 and max(cont)<=34,99):
	print("OBESIDADE")
elif(max(cont)>=35 and max(cont)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

-- ERROR:
File "XXXX", line 12
    print("O MAIOR IMC DA TURMA EH:" max(cont))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:41:28) 
-- CODE:
from numpy import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(peso)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(round(cont,2))
print("O MAIOR IMC DA TURMA EH:" max(cont))

if(max(cont)<17):
	print("MUITO ABAIXO DO PESO")
elif(17<=max(cont)<=18,49):
	print("ABAIXO DO PESO")
elif(18,5<=max(cont)<=24,99):
	print("PESO NORMAL")
elif(25<=max(cont)<=29,99):
	print("ACIMA DO PESO")
elif(30<=max(cont)<=34,99):
	print("OBESIDADE")
elif(35<=max(cont)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

-- ERROR:
File "XXXX", line 12
    print("O MAIOR IMC DA TURMA EH:" max(cont))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:44:07) 
-- CODE:
from numpy import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(peso)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(round(cont,2))
print("O MAIOR IMC DA TURMA EH:" max(cont))


-- ERROR:
File "XXXX", line 12
    print("O MAIOR IMC DA TURMA EH:" max(cont))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:44:32) 
-- CODE:
from numpy import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(peso)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(round(cont,2))
print("O MAIOR IMC DA TURMA EH:", max(cont))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:44:39) 
-- CODE:
from numpy import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(peso)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(round(cont,2))
print("O MAIOR IMC DA TURMA EH:", max(cont))

if(max(cont)<17):
	print("MUITO ABAIXO DO PESO")
elif(17<=max(cont)<=18,49):
	print("ABAIXO DO PESO")
elif(18,5<=max(cont)<=24,99):
	print("PESO NORMAL")
elif(25<=max(cont)<=29,99):
	print("ACIMA DO PESO")
elif(30<=max(cont)<=34,99):
	print("OBESIDADE")
elif(35<=max(cont)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:45:50) 
-- CODE:
from numpy import *
from math import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(peso)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(round(cont,2))
print("O MAIOR IMC DA TURMA EH:", max(cont))

if(max(cont)<17):
	print("MUITO ABAIXO DO PESO")
elif(17<=max(cont)<=18,49):
	print("ABAIXO DO PESO")
elif(18,5<=max(cont)<=24,99):
	print("PESO NORMAL")
elif(25<=max(cont)<=29,99):
	print("ACIMA DO PESO")
elif(30<=max(cont)<=34,99):
	print("OBESIDADE")
elif(35<=max(cont)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:46:14) 
-- CODE:
from numpy import *
from math import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(peso)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(round(cont,2))
print("O MAIOR IMC DA TURMA EH:", max(cont))

if(max(cont)<17):
	print("MUITO ABAIXO DO PESO")
elif(17<=max(cont)<=18,49):
	print("ABAIXO DO PESO")
elif(18,5<=max(cont)<=24,99):
	print("PESO NORMAL")
elif(25<=max(cont)<=29,99):
	print("ACIMA DO PESO")
elif(30<=max(cont)<=34,99):
	print("OBESIDADE")
elif(35<=max(cont)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:46:28) 
-- CODE:
from numpy import *
from math import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(peso)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
print(round(cont,2))
print("O MAIOR IMC DA TURMA EH:", max(cont))

if(max(cont)<17):
	print("MUITO ABAIXO DO PESO")
elif(17<=max(cont)<=18,49):
	print("ABAIXO DO PESO")
elif(18,5<=max(cont)<=24,99):
	print("PESO NORMAL")
elif(25<=max(cont)<=29,99):
	print("ACIMA DO PESO")
elif(30<=max(cont)<=34,99):
	print("OBESIDADE")
elif(35<=max(cont)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:48:49) 
-- CODE:
from numpy import *
from math import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(peso)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
for j in range(size(cont)):
	cont[j] = round(cont,2)

print(cont)

print("O MAIOR IMC DA TURMA EH:", max(cont))

if(max(cont)<17):
	print("MUITO ABAIXO DO PESO")
elif(17<=max(cont)<=18,49):
	print("ABAIXO DO PESO")
elif(18,5<=max(cont)<=24,99):
	print("PESO NORMAL")
elif(25<=max(cont)<=29,99):
	print("ACIMA DO PESO")
elif(30<=max(cont)<=34,99):
	print("OBESIDADE")
elif(35<=max(cont)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:49:52) 
-- CODE:
from numpy import *
from math import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(peso)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
for j in range(size(cont)):
	cont[j] = round(cont[j],2)

print(cont)

print("O MAIOR IMC DA TURMA EH:", max(cont))

if(max(cont)<17):
	print("MUITO ABAIXO DO PESO")
elif(17<=max(cont)<=18,49):
	print("ABAIXO DO PESO")
elif(18,5<=max(cont)<=24,99):
	print("PESO NORMAL")
elif(25<=max(cont)<=29,99):
	print("ACIMA DO PESO")
elif(30<=max(cont)<=34,99):
	print("OBESIDADE")
elif(35<=max(cont)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:51:43) 
-- CODE:
from numpy import *
from math import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(peso)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
for j in range(size(cont)):
	cont[j] = round(cont[j],2)

print(cont)

print("O MAIOR IMC DA TURMA EH:", max(cont))

if(max(cont)<17):
	print("MUITO ABAIXO DO PESO")
elif(17<=max(cont)<=18,49):
	print("ABAIXO DO PESO")
elif(18,5<=max(cont)<=24,99):
	print("PESO NORMAL")
elif(25<=max(cont)<=29,99):
	print("ACIMA DO PESO")
elif(30<=max(cont)<=34,99):
	print("OBESIDADE")
elif(35<=max(cont)<=39,99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

-- EXECUTION TIME:
0.886832
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
ABAIXO DO PESO
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
ABAIXO DO PESO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:52:26) 
-- CODE:
from numpy import *
from math import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(peso)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
for j in range(size(cont)):
	cont[j] = round(cont[j],2)

print(cont)

print("O MAIOR IMC DA TURMA EH:", max(cont))

if(max(cont)<17):
	print("MUITO ABAIXO DO PESO")
elif(17<=max(cont)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(cont)<=24.99):
	print("PESO NORMAL")
elif(25<=max(cont)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(cont)<=34.99):
	print("OBESIDADE")
elif(35<=max(cont)<=39.99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:53:18) 
-- CODE:
from numpy import *
from math import *

peso = array(eval(input()))
altura = array(eval(input()))
n = size(peso)
cont=zeros(n,dtype=float)

for i in range(size(peso)):
	cont[i] = peso[i]/(altura[i]*altura[i])
	
for j in range(size(cont)):
	cont[j] = round(cont[j],2)

print(cont)

print("O MAIOR IMC DA TURMA EH:", max(cont))

if(max(cont)<17):
	print("MUITO ABAIXO DO PESO")
elif(17<=max(cont)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(cont)<=24.99):
	print("PESO NORMAL")
elif(25<=max(cont)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(cont)<=34.99):
	print("OBESIDADE")
elif(35<=max(cont)<=39.99):
	print("OBESIDADE SEVERA")
else:
	print("OBESIDADE MORBIDA")

-- EXECUTION TIME:
1.08126
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
